WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.3.5-dev, 2011-03-18


Version 0.3.5 (under dev!)
--------------------------

* core: add new option weechat.look.highlight_tags (force highlight on tags)
* core: fix bug with repeat of last completion ("%*"), which failed when many
  templates are used in completion
* core: allow list of buffers in command /filter (exclusion with prefix "!")
  (task #10880)
* core: reload file with certificate authorities when option
  weechat.network.gnutls_ca_file is changed
* core: rebuild bar content when items are changed in an hidden bar
* core: fix verification of SSL certificates by calling gnutls verify callback
  (patch #7459)
* core: remember scroll position for all buffers in windows (bug #25555)
* core: fix crash when using column filling in bars with some empty items
  (bug #32565)
* core: allow relative size for command /window resize
* core: add some default keys for gnome-terminal (home/end, ctrl+up/down,
  alt+pgup/pgdn)
* core: add option "memory" to command /debug
* core: add option weechat.look.read_marker_string
* core: improve display of commands lists in /help (add arguments -list
  and -listfull) (task #10299)
* core: improve arguments displayed in /help of commands
* core: fix terminal title when $TERM starts with "screen"
* core: add some chars after cursor when scrolling input line: new option
  weechat.look.input_cursor_scroll (bug #21391)
* core: add color "gray"
* core: add attributes for colors ("*": bold, "!": reverse, "_": underline)
* core: dynamically allocate color pairs (extended colors can be used without
  being added with command "/color")
* core: allow background for nick colors (using ":")
* api: add new function buffer_match_list
* aspell: fix spellers used after switch of window (bug #32811)
* irc: add new options irc.look.buffer_switch_autojoin and
  irc.look.buffer_switch_join (task #8542, task #10506)
* irc: add new option irc.look.smart_filter_nick